atualização dos acidentes fatais

--- a/jupyter/Totals-all-years-accidents.ipynb
+++ b/jupyter/Totals-all-years-accidents.ipynb
@@ -305,6 +305,7 @@
     }
    ],
    "source": [
+    "# Total de acidentes por mês (acumulado):\n",
     "acidentes_por_mes_acumulado = data['data_inversa'].dt.month.value_counts().sort_index()\n",
     "\n",
     "# Normalização\n",
