--- a/jupyter/Totals-all-years-deaths.ipynb
+++ b/jupyter/Totals-all-years-deaths.ipynb
@@ -84,7 +84,7 @@
     }
    ],
    "source": [
-    "# Qual UF tem mais acidentes?\n",
+    "# Qual UF tem mais acidentes fatais?\n",
     "acidentes_fatais_uf = acidentes_fatais[\"uf\"].value_counts().nlargest(10)\n",
     "\n",
     "# Normalização\n",
@@ -121,7 +121,7 @@
     }
    ],
    "source": [
-    "# Qual dia da semana tem mais acidentes?\n",
+    "# Qual dia da semana tem mais acidentes fatais?\n",
     "acidentes_fatais_dia_semana = acidentes_fatais[\"dia_semana\"].value_counts().nlargest(10)\n",
     "\n",
     "# Normalização\n",
@@ -158,7 +158,7 @@
     }
    ],
    "source": [
-    "# Qual o tipo de acidente mais comum?\n",
+    "# Qual o tipo de acidente mais mortes?\n",
     "tipo_acidentes_fatais = acidentes_fatais[\"tipo_acidente\"].value_counts().nlargest(10)\n",
     "\n",
     "# Normalização\n",
@@ -195,7 +195,7 @@
     }
    ],
    "source": [
-    "# Qual a causa de acidente mais comum?\n",
+    "# Qual a causa de acidente mais comum em acidentes fatais?\n",
     "causa_acidentes_fatais = acidentes_fatais[\"causa_acidente\"].value_counts().nlargest(10)\n",
     "\n",
     "# Normalização\n",
@@ -275,6 +275,7 @@
     }
    ],
    "source": [
+    "# Total de acidentes fatais por ano?\n",
     "acidentes_fatais_acumulado_mes = pd.to_datetime(acidentes_fatais['data_inversa']).dt.month.value_counts().sort_index()\n",
     "\n",
     "# Normalização\n",
